syntax = "proto3";

package auth_service;
option go_package = "github.com/Likhon22/ecom_microservice/auth_service/proto/gen;userpb";
import "validate/validate.proto";


service AuthService {
rpc Login (LoginRequest) returns (LoginResponse);
rpc ValidateRefreshToken (ValidateRefreshTokenRequest) returns (ValidateRefreshTokenResponse);
rpc Logout (LogoutRequest) returns (LogoutResponse);
}

message LoginRequest {
 string email =1;
 string password =2;
 string device_id=3;
}

message LoginResponse {
  string message =1;
}
message ValidateRefreshTokenRequest {
  string refresh_token = 1;
}
message ValidateRefreshTokenResponse {
string message =1;

}

message LogoutRequest {
  string refresh_token = 1;
}
message LogoutResponse {
string message =1;

}